--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                     <div class="invalid-feedback">
                                         senha invalida
                                                                    </div>
-                                    <small id="passwordHelp" class="form-text text-muted"> A senha deve conter pelo menos 8 digitos</small>
+                                    <small id="passwordHelp" class="form-text text-muted"> A senha deve conter maiuscula e minuscula e no minimo 8 caracteres.</small>
                                     
                             </div>
                             
